--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
                 const canvas = document.getElementById("game");
                 const ctx = canvas.getContext("2d");
 
+                let inGame = false;
+
                 let headLoaded = false;
                 const headImage = new Image(128,128);
                 headImage.onload = () => headLoaded = true;
@@ -129,6 +131,101 @@
                 let keysOverflow = 0;
                 let incrementPerFrame = 0;
                 let missedKeys = 0;
+
+                // explode
+                var config = {
+                  particleNumber: 80,
+                  maxParticleSize: 5,
+                  maxSpeed: 60,
+                  colorVariation: 50
+                };
+
+                // Colors
+                var colorPalette = {
+                    bg: {r:12,g:9,b:29},
+                    matter: [
+                      {r:36,g:18,b:42}, // darkPRPL
+                      {r:78,g:36,b:42}, // rockDust
+                      {r:252,g:178,b:96}, // solorFlare
+                      {r:253,g:238,b:152} // totesASun
+                    ]
+                };
+
+                // Some Variables hanging out
+                var particles = [],
+                    centerX = canvas.width / 2,
+                    centerY = canvas.height / 2,
+                    drawBg,
+                    // Draws the background for the canvas, because space
+                    drawBg = function (ctx, color) {
+                        ctx.fillStyle = "rgb(" + color.r + "," + color.g + "," + color.b + ")";
+                        ctx.fillRect(0,0,canvas.width,canvas.height);
+                    };
+                    var Particle = function (x, y) {
+                        // X Coordinate
+                        this.x = x || Math.round(Math.random() * canvas.width);
+                        // Y Coordinate
+                        this.y = y || Math.round(Math.random() * canvas.height);
+                        // Radius of the space dust
+                        this.r = Math.ceil(Math.random() * config.maxParticleSize);
+                        // Color of the rock, given some randomness
+                        this.c = colorVariation(colorPalette.matter[Math.floor(Math.random() * colorPalette.matter.length)], true);
+                        // Speed of which the rock travels
+                        this.s = Math.pow(Math.ceil(Math.random() * config.maxSpeed), .7);
+                        // Direction the Rock flies
+                        this.d = Math.round(Math.random() * 360);
+                    };
+
+                    // Provides some nice color variation
+                    // Accepts an rgba object
+                    // returns a modified rgba object or a rgba string if true is passed in for argument 2
+                    var colorVariation = function (color, returnString) {
+                        var r,g,b,a, variation;
+                        r = Math.round(((Math.random() * config.colorVariation) - (config.colorVariation/2)) + color.r);
+                        g = Math.round(((Math.random() * config.colorVariation) - (config.colorVariation/2)) + color.g);
+                        b = Math.round(((Math.random() * config.colorVariation) - (config.colorVariation/2)) + color.b);
+                        a = Math.random() + .5;
+                        if (returnString) {
+                            return "rgba(" + r + "," + g + "," + b + "," + a + ")";
+                        } else {
+                            return {r,g,b,a};
+                        }
+                    };
+
+                    // Used to find the rocks next point in space, accounting for speed and direction
+                    var updateParticleModel = function (p) {
+                        var a = 180 - (p.d + 90); // find the 3rd angle
+                        p.d > 0 && p.d < 180 ? p.x += p.s * Math.sin(p.d) / Math.sin(p.s) : p.x -= p.s * Math.sin(p.d) / Math.sin(p.s);
+                        p.d > 90 && p.d < 270 ? p.y += p.s * Math.sin(a) / Math.sin(p.s) : p.y -= p.s * Math.sin(a) / Math.sin(p.s);
+                        return p;
+                    };
+
+                    // Just the function that physically draws the particles
+                    // Physically? sure why not, physically.
+                    var drawParticle = function (x, y, r, c) {
+                        ctx.beginPath();
+                        ctx.fillStyle = c;
+                        ctx.arc(x, y, r, 0, 2*Math.PI, false);
+                        ctx.fill();
+                        ctx.closePath();
+                    };
+
+                    // Remove particles that aren't on the canvas
+                    var cleanUpArray = function () {
+                        particles = particles.filter((p) => {
+                          return (p.x > -100 && p.y > -100);
+                        });
+                    };
+
+                    var initParticles = function (numParticles, x, y) {
+                        for (let i = 0; i < numParticles; i++) {
+                            particles.push(new Particle(x, y));
+                        }
+                        particles.forEach((p) => {
+                            drawParticle(p.x, p.y, p.r, p.c);
+                        });
+                    };
+                // explode
 
                 const createKey = () => {
                     let y;
@@ -250,6 +347,7 @@
                             missedKeys++;
                             keys.splice(index, 1);
                             reduceOverflowedKeys();
+                            (new Audio('./sound/key.lost.mp3')).play();
                         }
                     });
                 };
@@ -272,8 +370,19 @@
 
                         lastUpdate = time;
 
+                        if (particles.length > 0) {
+                            particles.map((p) => {
+                              return updateParticleModel(p);
+                            });
+
+                            particles.forEach((p) => {
+                                drawParticle(p.x, p.y, p.r, p.c);
+                            });
+                        }
+
                         requestAnimationFrame(update);
                     } else {
+                        inGame = false;
                         drawResult(parseInt(getPlayTime() / 1000, 10));
                     }
                 };
@@ -309,6 +418,8 @@
                     missedKeys = 0;
                     startTime = (new Date().getTime());
 
+                    particles = [];
+
                     for (let i = 0; i < numberOfKeys; i++) {
                         safeCreateKey();
                     }
@@ -317,25 +428,33 @@
                 };
 
                 startButton.addEventListener("click", () => {
+                    inGame = true;
                     reset();
                     requestAnimationFrame(update);
                 });
 
                 document.addEventListener("keyup", (e) => {
-                    const index = keys.findIndex(key => (32 + e.keyCode) === key.keyCode);
+                    if (inGame) {
+                        (new Audio('./sound/laser.shot.mp3')).play();
+                        const index = keys.findIndex(key => (32 + e.keyCode) === key.keyCode);
 
-                    if (index > -1) {
-                        if (soundEffects)
-                            (new Audio('./sound/meow1.fast.wav')).play();
+                        if (index > -1) {
+                            if (soundEffects)
+                                (new Audio('./sound/meow1.fast.wav')).play();
 
-                        keys.splice(index, 1);
+                            const key = keys[index];
+                            cleanUpArray();
+                            initParticles(config.particleNumber, key.y, key.x);
 
-                        if (keysOverflow > 0) {
-                            reduceOverflowedKeys();
+                            keys.splice(index, 1);
+
+                            if (keysOverflow > 0) {
+                                reduceOverflowedKeys();
+                            }
                         }
-                    }
 
-                    keyAttempts++;
+                        keyAttempts++;
+                    }
 
                     event.preventDefault();
                 });
