Add lost keys score to better explain hit accuracy

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                     ctx.fillText(`Keys Destroyed: ${numberOfKeys}`, 20, 128);
                     ctx.fillText(`Game Speed: ${keySpeed}`, 20, 192);
                     ctx.fillText(`Hit Accuracy: ${hitAccuracy}%`, 20, 256);
+                    ctx.fillText(`Lost Keys: ${missedKeys}`, 20, 320);
                 };
 
                 const safeCreateKey = () => {
