--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         <form id="controls">
             <label for="sound_fx">Sound</label>
             <input id="sound_fx" type="checkbox" checked="checked"/>
-            <input id="start" type="submit" label="Start" />
+            <input id="start" type="submit" value="Start" />
         </form>
         <canvas id="game" width="1024" height="768"></canvas>
         <div id="fire">
