Add link to side quest

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
             <label for="sound_fx">Sound</label>
             <input id="sound_fx" type="checkbox" checked="checked"/>
             <input id="start" type="submit" value="Start" />
+            <a href="/keykey/side-quest/">Side Quest!</a>
         </form>
         <canvas id="game" width="1024" height="768"></canvas>
         <div id="fire">
